--- a/src/com/youzan/mobile/enjoyplugin/ui/HomeDialog.form
+++ b/src/com/youzan/mobile/enjoyplugin/ui/HomeDialog.form
@@ -18,11 +18,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <hspacer id="98af6">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
           <grid id="9538f" binding="buttonPane" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="true" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
@@ -49,6 +44,16 @@
               </component>
             </children>
           </grid>
+          <component id="2dc63" class="javax.swing.JTextField" binding="tag">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="使用过程中遇到任何问题请联系Silas"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="e3588" binding="tablePane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="true" same-size-vertically="true" hgap="-1" vgap="-1">
