--- a/src/com/youzan/mobile/enjoyplugin/ui/HomeDialog.form
+++ b/src/com/youzan/mobile/enjoyplugin/ui/HomeDialog.form
@@ -18,7 +18,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="9538f" binding="buttonPane" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="true" hgap="-1" vgap="-1">
+          <grid id="9538f" binding="buttonPane" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="true"/>
@@ -40,6 +40,14 @@
                 </constraints>
                 <properties>
                   <text value="取消"/>
+                </properties>
+              </component>
+              <component id="53c57" class="javax.swing.JButton" binding="buttonDiff">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Diff Dev"/>
                 </properties>
               </component>
             </children>
@@ -102,6 +110,14 @@
             </constraints>
             <properties/>
           </component>
+          <scrollpane id="8f22a">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </scrollpane>
         </children>
       </grid>
       <grid id="694c8" binding="publishPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
